--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,127 +1,157 @@
-@import url(https://fonts.googleapis.com/icon?family=Material+Icons);
+@charset "UTF-8";
+/*
+@font-face {
+  font-family: 'Noto Sans Japanese';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(//fonts.gstatic.com/ea/notosansjapanese/v6/NotoSansJP-Regular.woff2) format('woff2'),
+       url(//fonts.gstatic.com/ea/notosansjapanese/v6/NotoSansJP-Regular.woff) format('woff'),
+       url(//fonts.gstatic.com/ea/notosansjapanese/v6/NotoSansJP-Regular.otf) format('opentype');
+}
+
+@font-face {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local('Roboto'), local('Roboto-Regular'), url(https://fonts.gstatic.com/s/roboto/v18/KFOmCnqEu92Fr1Mu4mxKKTU1Kg.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+*/
 /*-----------------------------------------------------------------------------
 * Common
 -----------------------------------------------------------------------------*/
 * {
   padding: 0;
   margin: 0;
-  font-family: "Helvetica Neue", "Helvetica", "Arial";
+  font-family: "Helvetica Neue", "Helvetica", Arial, "ヒラギノ角ゴ ProN W3", Hiragino Kaku Gothic ProN, "Roboto", "Noto Sans Japanese", YuGothic, "メイリオ", Meiryo, sans-serif;
   font-weight: normal;
-  font-size: 1.0em;
-  letter-spacing: 0.04em;
-  color: #666;
+  font-size: 15px;
+  line-height: 32px;
+  letter-spacing: 1px;
+  color: #333;
   position: relative;
   box-sizing: border-box;
   outline: none;
-  transition: all 0.25s; }
+  transition: all 600ms; }
 
 body {
   width: 100%;
+  overflow-y: scroll;
   background-image: url("../../assets/img/white_wall_hash.png"); }
-  body a.button {
-    display: block;
-    margin: 0 auto;
-    margin-bottom: 24px;
-    text-decoration: none;
-    text-align: center;
-    width: 200px;
-    height: 48px;
-    line-height: 44px;
-    background-color: #fefefe;
-    border: 2px solid #369;
-    color: #369;
-    border-radius: 24px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); }
-    body a.button:hover {
-      opacity: 0.8; }
-  body .center {
-    text-align: center; }
-  body .moving {
-    opacity: 0;
-    margin-top: -24px; }
 
-#cover {
+.jp {
+  text-align: justify; }
+
+.en {
+  font-family: "PT Serif";
+  font-size: 17px;
+  text-align: left; }
+
+a.button {
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 24px;
+  text-decoration: none;
+  text-align: center;
+  width: 200px;
+  height: 48px;
+  line-height: 44px;
+  background-color: #fefefe;
+  border: 2px solid #369;
+  color: #369;
+  border-radius: 24px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); }
+  a.button:hover {
+    opacity: 0.8; }
+
+/*-----------------------------------------------------------------------------
+* Basic
+-----------------------------------------------------------------------------*/
+#pjax-container #loading-message {
   position: fixed;
-  z-index: 1000;
-  width: 100%;
-  height: 100%;
   top: 0;
   left: 0;
-  background-color: white;
-  text-align: center;
-  color: rgba(0, 0, 0, 0.8);
-  vertical-align: middle;
-  line-height: 100%;
-  transition: all 0s; }
-  #cover p {
+  width: 100%;
+  height: 100%;
+  display: block;
+  pointer-events: none;
+  opacity: 1; }
+  #pjax-container #loading-message p {
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: rgba(0, 0, 0, 0.8);
-    font-family: Helvetica;
-    font-size: small; }
-
-#container {
-  margin: 0 auto;
-  width: 100%;
-  max-width: 960px;
-  padding: 0 24px 72px 24px; }
-
-#pjax-content {
-  transform: translateY(40px);
+    color: #aaa;
+    font-size: 14px; }
+#pjax-container #pjax-content {
+  opacity: 0;
+  transform: translateY(8px);
+  height: 100vh; }
+#pjax-container.show #pjax-content {
+  opacity: 1;
+  transform: translateY(0);
+  height: auto; }
+#pjax-container.show #loading-message {
   opacity: 0; }
-  #pjax-content.show {
-    transform: translateY(0);
-    opacity: 1; }
 
-/*-----------------------------------------------------------------------------
-* Blocks
------------------------------------------------------------------------------*/
-#icons-block {
+#p5canvas-block {
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
+  height: 100%;
+  z-index: -1; }
+
+#header-block {
   height: 36px;
   line-height: 28px;
-  margin-top: 24px; }
-  #icons-block i:hover {
+  margin-top: 24px;
+  margin-right: 16px; }
+  #header-block i:hover {
     cursor: pointer;
     opacity: 0.7; }
-  #icons-block a {
-    color: #369;
-    text-decoration: none; }
-  #icons-block #icons-left {
+  #header-block #icons-left {
     position: absolute;
     top: 0;
     left: 0;
     height: 36px;
     line-height: 36px;
     vertical-align: middle; }
-    #icons-block #icons-left a {
+    #header-block #icons-left a {
       height: 36px;
       line-height: 36px;
       vertical-align: middle; }
-  #icons-block #icons-right {
+  #header-block #icons-right {
     position: absolute;
     top: 0;
     right: 0;
     display: flex;
     flex-wrap: wrap; }
-    #icons-block #icons-right .text-menu {
+    #header-block #icons-right .text-menu {
       width: fit-content;
       text-align: center; }
-    #icons-block #icons-right .separator {
+      #header-block #icons-right .text-menu a {
+        color: #369;
+        text-decoration: none; }
+        #header-block #icons-right .text-menu a.disabled {
+          color: #999; }
+          #header-block #icons-right .text-menu a.disabled:hover {
+            cursor: inherit; }
+    #header-block #icons-right .separator {
       width: 40px;
       color: #ccc;
       text-align: center; }
 
 #title-block {
-  margin-top: 16px;
+  margin-top: 24px;
   margin-bottom: 48px;
   text-align: center; }
   #title-block h1 {
     margin-top: 12px;
-    font-size: 2.0em;
-    letter-spacing: 0.04em;
+    font-size: 24px;
+    letter-spacing: 1px;
     color: #333; }
   #title-block h3 {
     margin-top: 8px;
@@ -132,166 +162,149 @@ body {
     line-height: 1.8em;
     margin-top: 36px; }
 
-#works-block h3 {
-  font-size: 1.0em;
-  margin-bottom: 16px;
-  color: #999; }
-#works-block .works {
-  display: flex;
-  flex-wrap: wrap;
-  margin: 0 -20px; }
-  #works-block .works .work {
-    margin: 0 auto;
-    margin-bottom: 32px;
-    width: calc(84%);
-    border-radius: 2px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    background-color: #fefefe; }
-    #works-block .works .work .image {
-      width: 100%;
-      height: 180px;
-      border-top-left-radius: 2px;
-      border-top-right-radius: 2px;
-      background-position: center center;
-      background-repeat: no-repeat;
-      background-size: cover; }
-      #works-block .works .work .image .ribbon {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 64px;
-        height: 64px;
-        overflow: hidden; }
-        #works-block .works .work .image .ribbon span {
-          display: inline-block;
-          position: absolute;
-          top: 20px;
-          right: -24px;
-          height: 26px;
-          width: 160px;
-          background: #cf5353;
-          -webkit-transform: rotate(-45deg);
-          -ms-transform: rotate(-45deg);
-          transform: rotate(-45deg);
-          box-shadow: 0 0 0 2px #cf5353;
-          border-top: solid 1px rgba(255, 255, 255, 0.4);
-          border-bottom: solid 1px rgba(255, 255, 255, 0.4); }
-    #works-block .works .work .title {
-      padding: 16px;
-      font-size: 1.1em;
-      font-weight: 500;
-      color: #333;
-      line-height: 1.2em;
-      height: 64px; }
-    #works-block .works .work .date {
-      padding: 0 16px 16px 16px;
-      font-size: .9em;
-      color: #aaa; }
-    #works-block .works .work a {
-      position: absolute;
-      width: 100%;
-      height: 100%; }
-
-#about-block {
-  max-width: 600px;
-  margin: 0 auto; }
-  #about-block section {
-    margin-bottom: 36px; }
-    #about-block section .gray {
-      color: #999; }
-    #about-block section .strong {
-      font-weight: 400;
-      color: #432; }
-    #about-block section .subsection {
-      margin-bottom: 16px; }
-      #about-block section .subsection p, #about-block section .subsection h4 {
-        margin-bottom: 4px; }
-      #about-block section .subsection span.delimiter {
-        padding: 0 12px;
-        color: #ccc; }
-    #about-block section h2 {
-      color: #333;
-      font-size: 1.4em;
-      margin-bottom: 4px; }
-    #about-block section h5 {
-      color: #999;
-      margin-bottom: 16px; }
-    #about-block section h3 {
-      color: #333;
-      font-size: 1.2em;
-      line-height: 1.4em;
-      border-left: 4px solid #b43;
-      padding-left: 8px;
-      margin-bottom: 12px; }
-
 /*-----------------------------------------------------------------------------
 * Pages
 -----------------------------------------------------------------------------*/
-#pjax-content.work-description #title-block {
-  text-align: left; }
-  #pjax-content.work-description #title-block .date {
-    color: #999;
-    font-size: 0.9em; }
-  #pjax-content.work-description #title-block h1 {
-    font-size: 1.6em; }
-#pjax-content.work-description #eyecatch-block {
-  overflow-x: hidden;
-  margin-left: calc(((100vw - 100%) / 2) * -1);
-  width: 100vw; }
-  #pjax-content.work-description #eyecatch-block #eyecatch {
-    margin-left: -15%;
-    width: 130%; }
-#pjax-content.work-description #article-block {
-  margin-top: 24px; }
-  #pjax-content.work-description #article-block p {
-    font-family: 'PT Serif', 'Georgia', serif;
-    line-height: 1.6em;
-    margin-bottom: 16px; }
-    #pjax-content.work-description #article-block p a {
-      font-family: 'PT Serif', 'Georgia', serif; }
-    #pjax-content.work-description #article-block p a.button {
-      font-family: "Helvetica Neue", "Helvetica";
-      margin-top: 24px;
-      margin-bottom: 36px; }
-    #pjax-content.work-description #article-block p img {
+#pjax-content[page=home] #works-block {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 1080px;
+  margin: 0 auto; }
+  #pjax-content[page=home] #works-block .work {
+    margin: 0 auto;
+    margin-bottom: 64px;
+    width: 100%;
+    border-radius: 2px; }
+    @media screen and (min-width: 540px) {
+      #pjax-content[page=home] #works-block .work {
+        margin: 0 20px 32px 20px;
+        width: calc((100% / 2) - 40px);
+        width: 100%; } }
+    @media screen and (min-width: 900px) {
+      #pjax-content[page=home] #works-block .work {
+        margin: 0 10px 32px 10px;
+        width: calc((100% / 3) - 20px); } }
+    #pjax-content[page=home] #works-block .work a {
+      display: block;
+      position: relative;
       width: 100%; }
-    #pjax-content.work-description #article-block p.disclaimer {
-      text-align: center;
-      font-size: 0.8em;
-      color: #933;
-      margin-top: -12px; }
-#pjax-content.home div.button-block {
-  margin-top: 16px;
-  margin-bottom: 48px; }
+      #pjax-content[page=home] #works-block .work a:before {
+        content: "";
+        display: block;
+        padding-top: 75%;
+        /* 高さを幅の75%に固定 */ }
+      #pjax-content[page=home] #works-block .work a div {
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        background: center center / cover no-repeat #eee; }
+    #pjax-content[page=home] #works-block .work .info {
+      padding: 8px 16px 16px 16px; }
+      #pjax-content[page=home] #works-block .work .info .title {
+        font-size: 18px;
+        font-weight: 500;
+        color: #333;
+        line-height: 28px; }
+        @media screen and (min-width: 540px) {
+          #pjax-content[page=home] #works-block .work .info .title {
+            padding: 8px 0px 16px 0px;
+            font-size: 16px; } }
+      #pjax-content[page=home] #works-block .work .info .date {
+        font-size: 14px;
+        color: #999; }
 
-/*-----------------------------------------------------------------------------
-* Responsive
------------------------------------------------------------------------------*/
-@media screen and (min-width: 600px) {
-  #works-block .works .work {
-    margin: 0 20px 32px 20px;
-    width: calc((100% / 2) - 40px); }
-    #works-block .works .work .title {
-      font-size: 1em; }
+#pjax-content[page=about] {
+  width: calc(100% - 32px);
+  max-width: 720px;
+  margin: 0 auto; }
+  #pjax-content[page=about] h2 {
+    color: #666;
+    font-size: 20px;
+    border-left: 4px solid #b43;
+    padding-left: 8px; }
+  #pjax-content[page=about] #title-block {
+    text-align: left; }
+    #pjax-content[page=about] #title-block h1 {
+      margin-bottom: 32px; }
+    #pjax-content[page=about] #title-block p {
+      color: #666;
+      margin-top: 8px;
+      font-size: 16px;
+      line-height: 32px; }
+      #pjax-content[page=about] #title-block p a {
+        color: #36a;
+        text-decoration: none; }
+      #pjax-content[page=about] #title-block p .separator {
+        color: #ccc; }
+  #pjax-content[page=about] #publicity-block {
+    margin-top: 36px; }
+    #pjax-content[page=about] #publicity-block section {
+      margin: 32px 0; }
+      @media screen and (min-width: 480px) {
+        #pjax-content[page=about] #publicity-block section {
+          display: flex; } }
+      #pjax-content[page=about] #publicity-block section .date {
+        font-weight: bold;
+        margin-bottom: 4px; }
+        @media screen and (min-width: 480px) {
+          #pjax-content[page=about] #publicity-block section .date {
+            padding-right: 40px; } }
+  #pjax-content[page=about] #bio-block {
+    margin-top: 60px; }
+    #pjax-content[page=about] #bio-block p {
+      margin: 16px 0; }
 
-  #pjax-content.work-description #title-block h1 {
-    font-size: 1.6em;
-    font-weight: normal; }
-  #pjax-content.work-description #eyecatch-block #eyecatch {
-    margin-left: 0;
-    width: 100%; } }
-@media screen and (min-width: 900px) {
-  #works-block .works .work {
-    margin: 0 10px 32px 10px;
-    width: calc((100% / 3) - 20px); }
-    #works-block .works .work .title {
-      font-size: 0.9em; }
-
-  #pjax-content.work-description #title-block h1 {
-    font-size: 2.0em;
-    font-weight: normal; }
-  #pjax-content.work-description #eyecatch-block {
-    margin-left: 0;
-    width: 100%; } }
+#pjax-content[page=work-description] {
+  margin: 0 auto;
+  width: calc(100% - 32px);
+  max-width: 720px; }
+  #pjax-content[page=work-description] #title-block {
+    text-align: left; }
+    #pjax-content[page=work-description] #title-block .date {
+      color: #999;
+      font-size: 14px; }
+    #pjax-content[page=work-description] #title-block h1 {
+      font-size: 20px; }
+      @media screen and (min-width: 540px) {
+        #pjax-content[page=work-description] #title-block h1 {
+          font-size: 22px; } }
+      @media screen and (min-width: 900px) {
+        #pjax-content[page=work-description] #title-block h1 {
+          font-size: 24px; } }
+  #pjax-content[page=work-description] #eyecatch-block {
+    overflow-x: hidden;
+    margin-left: calc(((100vw - 100%) / 2) * -1);
+    width: 100vw; }
+    @media screen and (min-width: 540px) {
+      #pjax-content[page=work-description] #eyecatch-block {
+        margin-left: 0;
+        width: 100%; } }
+    #pjax-content[page=work-description] #eyecatch-block #eyecatch {
+      margin-left: -15%;
+      width: 130%; }
+      @media screen and (min-width: 900px) {
+        #pjax-content[page=work-description] #eyecatch-block #eyecatch {
+          margin-left: 0;
+          width: 100%; } }
+  #pjax-content[page=work-description] #article-block {
+    margin-top: 24px; }
+    #pjax-content[page=work-description] #article-block p {
+      line-height: 1.6em;
+      margin-bottom: 16px; }
+      #pjax-content[page=work-description] #article-block p a {
+        font-family: inherit;
+        text-decoration: none;
+        color: #369; }
+      #pjax-content[page=work-description] #article-block p img {
+        width: 100%; }
+      #pjax-content[page=work-description] #article-block p.disclaimer {
+        text-align: center;
+        font-size: 12px;
+        color: #933;
+        margin-top: -12px; }
 
 /*# sourceMappingURL=style.css.map */
