--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,5 +1,30 @@
 @charset "UTF-8";
-@import url(https://fonts.googleapis.com/icon?family=Material+Icons);
+
+
+$width-tablet: 540px;
+$width-pc: 900px;
+
+/*
+@font-face {
+  font-family: 'Noto Sans Japanese';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(//fonts.gstatic.com/ea/notosansjapanese/v6/NotoSansJP-Regular.woff2) format('woff2'),
+       url(//fonts.gstatic.com/ea/notosansjapanese/v6/NotoSansJP-Regular.woff) format('woff'),
+       url(//fonts.gstatic.com/ea/notosansjapanese/v6/NotoSansJP-Regular.otf) format('opentype');
+}
+
+@font-face {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local('Roboto'), local('Roboto-Regular'), url(https://fonts.gstatic.com/s/roboto/v18/KFOmCnqEu92Fr1Mu4mxKKTU1Kg.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+*/
+
 
 
 /*-----------------------------------------------------------------------------
@@ -8,115 +33,122 @@
 * {
   padding: 0;
   margin: 0;
-  font-family: "Helvetica Neue", "Helvetica", "Arial";
+  font-family: "Helvetica Neue", "Helvetica", Arial, "ヒラギノ角ゴ ProN W3", Hiragino Kaku Gothic ProN, "Roboto", "Noto Sans Japanese", YuGothic, "メイリオ", Meiryo, sans-serif;
   font-weight: normal;
-  font-size: 1.0em;
-  letter-spacing: 0.04em;
-  color: #666;
+  font-size: 15px;
+  line-height: 32px;
+  letter-spacing: 1px;
+  color: #333;
   position: relative;
   box-sizing: border-box;
   outline: none;
-  transition: all 0.25s;
+  transition: all 600ms;
 }
 
 
 body {
   width: 100%;
+  overflow-y: scroll;
   background-image: url('../../assets/img/white_wall_hash.png');
-
-  a.button {
-    $height: 48px;
-    display: block;
-    margin: 0 auto;
-    margin-bottom: 24px;
-    text-decoration: none;
-    text-align: center;
-    width: 200px;
-    height: $height;
-    line-height: $height - 4px;
-    background-color: #fefefe;
-    border: 2px solid #369;
-    color: #369;
-    border-radius: $height / 2;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.2);
-
-    &:hover {
-      opacity: 0.8;
-    }
-  }
-
-  .center {
-    text-align: center;
-  }
-
-  .moving {
-    opacity: 0;
-    margin-top: -24px;
-  }
 }
 
-#cover {
-  position: fixed;
-  z-index: 1000;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background-color: rgba(255,255,255, 1);
-  text-align: center;
-  color: rgba(0,0,0,0.8);
-  vertical-align: middle;
-  line-height: 100%;
-  transition: all 0s;
-
-  p {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: rgba(0,0,0,0.8);
-    font-family: Helvetica;
-    font-size: small;
-  }
+.jp {
+  text-align: justify;
 }
 
-#container {
+.en {
+  font-family: "PT Serif";
+  font-size: 17px;
+  text-align: left;
+}
+
+a.button {
+  $height: 48px;
+  display: block;
   margin: 0 auto;
-  width: 100%;
-  max-width: 960px;
-  padding: 0 24px 72px 24px;
-}
+  margin-bottom: 24px;
+  text-decoration: none;
+  text-align: center;
+  width: 200px;
+  height: $height;
+  line-height: $height - 4px;
+  background-color: #fefefe;
+  border: 2px solid #369;
+  color: #369;
+  border-radius: $height / 2;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.2);
 
-#pjax-content {
-  transform: translateY(40px);
-  opacity: 0;
-
-  &.show {
-    transform: translateY(0);
-    opacity: 1;
+  &:hover {
+    opacity: 0.8;
   }
 }
 
 
 /*-----------------------------------------------------------------------------
-* Blocks
+* Basic
 -----------------------------------------------------------------------------*/
-#icons-block {
+#pjax-container {
+  #loading-message {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: block;
+    pointer-events: none;
+    opacity: 1;
+
+    p {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: #aaa;
+      font-size: 14px;
+    }
+  }
+
+  #pjax-content {
+    opacity: 0;
+    transform: translateY(8px);
+    height: 100vh;
+  }
+
+  &.show {
+    #pjax-content {
+      opacity: 1;
+      transform: translateY(0);
+      height: auto;
+    }
+
+    #loading-message {
+      opacity: 0;
+    }
+  }
+}
+
+
+#p5canvas-block {
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+
+#header-block {
   height: 36px;
   line-height: 28px;
   margin-top: 24px;
+  margin-right: 16px;
 
   i {
     &:hover {
       cursor: pointer;
       opacity: 0.7;
     }
-  }
-
-  a {
-    color: #369;
-    text-decoration: none;
   }
 
   #icons-left {
@@ -132,7 +164,6 @@ body {
       line-height: 36px;
       vertical-align: middle;
     }
-
   }
 
   #icons-right {
@@ -145,6 +176,18 @@ body {
     .text-menu {
       width: fit-content;
       text-align: center;
+
+      a {
+        color: #369;
+        text-decoration: none;
+
+        &.disabled {
+          color: #999;
+          &:hover {
+            cursor: inherit;
+          }
+        }
+      }
     }
 
     .separator {
@@ -155,15 +198,16 @@ body {
   }
 }
 
+
 #title-block {
-  margin-top: 16px;
+  margin-top: 24px;
   margin-bottom: 48px;
   text-align: center;
 
   h1 {
     margin-top: 12px;
-    font-size: 2.0em;
-    letter-spacing: 0.04em;
+    font-size: 24px;
+    letter-spacing: 1px;
     color: #333;
   }
 
@@ -180,273 +224,223 @@ body {
   }
 }
 
-#works-block {
-
-  h3 {
-    font-size: 1.0em;
-    margin-bottom: 16px;
-    color: #999;
-  }
-
-  .works {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 0 -20px;
-
-    .work {
-      margin: 0 auto;
-      margin-bottom: 32px;
-      width: calc(84%);
-      border-radius: 2px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.2);
-      background-color: #fefefe;
-
-      .image {
-        width: 100%;
-        height: 180px;
-        border-top-left-radius: 2px;
-        border-top-right-radius: 2px;
-        background-position: center center;
-        background-repeat: no-repeat;
-        background-size: cover;
-
-        .ribbon {
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 64px;
-          height: 64px;
-          overflow: hidden;
-
-          span {
-            display: inline-block;
-            position: absolute;
-            top: 20px;
-            right: -24px;
-            height: 26px;
-            width: 160px;
-            background: #cf5353;
-            -webkit-transform: rotate(-45deg);
-            -ms-transform: rotate(-45deg);
-            transform: rotate(-45deg);
-            box-shadow: 0 0 0 2px #cf5353;
-            border-top: solid 1px rgba(255, 255, 255, 0.4);
-            border-bottom: solid 1px rgba(255, 255, 255, 0.4);
-          }
-        }
-      }
-
-      .title {
-        padding: 16px;
-        font-size: 1.1em;
-        font-weight: 500;
-        color: #333;
-        line-height: 1.2em;
-        height: 64px;
-      }
-
-      .date {
-        padding: 0 16px 16px 16px;
-        font-size: .9em;
-        color: #aaa;
-      }
-
-      a {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-      }
-    }
-  }
-}
-
-#about-block {
-  max-width: 600px;
-  margin: 0 auto;
-
-  section {
-    margin-bottom: 36px;
-
-    .gray {
-      color: #999;
-    }
-
-    .strong {
-      font-weight: 400;
-      color: #432;
-    }
-
-    .subsection {
-      margin-bottom: 16px;
-
-      p,h4 {
-        margin-bottom: 4px;
-      }
-
-      span.delimiter {
-        padding: 0 12px;
-        color: #ccc;
-      }
-    }
-
-    h2 {
-      color: #333;
-      font-size: 1.4em;
-      margin-bottom: 4px;
-    }
-
-    h5 {
-      color: #999;
-      margin-bottom: 16px;
-    }
-
-    h3 {
-      color: #333;
-      font-size: 1.2em;
-      line-height: 1.4em;
-      border-left: 4px solid #b43;
-      padding-left: 8px;
-      margin-bottom: 12px;
-    }
-  }
-}
 
 
 /*-----------------------------------------------------------------------------
 * Pages
 -----------------------------------------------------------------------------*/
-#pjax-content {
-  &.work-description {
-    #title-block {
-      text-align: left;
+#pjax-content[page=home] {
 
-      .date {
-        color: #999;
-        font-size: 0.9em;
-      }
-
-      h1 {
-        font-size: 1.6em;
-      }
-    }
-
-    #eyecatch-block {
-      overflow-x: hidden;
-      margin-left: calc(((100vw - 100%) / 2) * -1);
-      width: 100vw;
-
-      #eyecatch {
-        margin-left: -15%;
-        width: 130%;
-      }
-    }
-
-    #article-block {
-      margin-top: 24px;
-
-      p {
-        font-family: 'PT Serif', 'Georgia', serif;
-        line-height: 1.6em;
-        margin-bottom: 16px;
-
-        a {
-          font-family: 'PT Serif', 'Georgia', serif;
-        }
-
-        a.button {
-          font-family: "Helvetica Neue", "Helvetica";
-          margin-top: 24px;
-          margin-bottom: 36px;
-        }
-
-        img {
-          width: 100%;
-        }
-
-        &.disclaimer {
-          text-align: center;
-          font-size: 0.8em;
-          color: #933;
-          margin-top: -12px;
-        }
-      }
-    }
-  }
-
-  &.home {
-    div.button-block {
-      margin-top: 16px;
-      margin-bottom: 48px;
-    }
-  }
-}
-
-
-/*-----------------------------------------------------------------------------
-* Responsive
------------------------------------------------------------------------------*/
-// Tablet
-@media screen and (min-width: 600px) {
   #works-block {
-    .works {
-      .work {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 1080px;
+    margin: 0 auto;
+
+    .work {
+      margin: 0 auto;
+      margin-bottom: 64px;
+      width: 100%;
+      border-radius: 2px;
+      //box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+      //background-color: #fefefe;
+
+      @media screen and (min-width: $width-tablet) {
         margin: 0 20px 32px 20px;
         width: calc((100% / 2) - 40px);
+        width: 100%;
+      }
+
+      @media screen and (min-width: $width-pc) {
+        margin: 0 10px 32px 10px;
+        width: calc((100% / 3) - 20px);
+      }
+
+      a {
+        display: block;
+        position: relative;
+        width: 100%;
+
+        &:before {
+          content: "";
+          display: block;
+          padding-top: 75%; /* 高さを幅の75%に固定 */
+        }
+
+        div {
+          position: absolute;
+          top: 0;
+          left: 0;
+          bottom: 0;
+          right: 0;
+          width: 100%;
+          height: 100%;
+          background: center center / cover no-repeat #eee;
+        }
+      }
+
+      .info {
+        padding: 8px 16px 16px 16px;
 
         .title {
-          font-size: 1em;
+          font-size: 18px;
+          font-weight: 500;
+          color: #333;
+          line-height: 28px;
+
+          @media screen and (min-width: $width-tablet) {
+            padding: 8px 0px 16px 0px;
+            font-size: 16px;
+          }
         }
-      }
-    }
-  }
 
-  #pjax-content {
-    &.work-description {
-
-      #title-block {
-        h1 {
-          font-size: 1.6em;
-          font-weight: normal;
-        }
-      }
-
-      #eyecatch-block {
-        #eyecatch {
-          margin-left: 0;
-          width: 100%;
+        .date {
+          font-size: 14px;
+          color: #999;
         }
       }
     }
   }
 }
 
-// PC
-@media screen and (min-width: 900px) {
-  #works-block {
-    .works {
-      .work {
-        margin: 0 10px 32px 10px;
-        width: calc((100% / 3) - 20px);
 
-        .title {
-          font-size: 0.9em;
+#pjax-content[page=about] {
+  width: calc(100% - 32px);
+  max-width: 720px;
+  margin: 0 auto;
+
+
+  h2 {
+    color: #666;
+    font-size: 20px;
+    border-left: 4px solid #b43;
+    padding-left: 8px;
+  }
+
+  #title-block {
+    text-align: left;
+
+    h1 {
+      margin-bottom: 32px;
+    }
+
+    p {
+      color: #666;
+      margin-top: 8px;
+      font-size: 16px;
+      line-height: 32px;
+
+      a {
+        color: #36a;
+        text-decoration: none;
+      }
+
+      .separator {
+        color: #ccc;
+      }
+    }
+  }
+
+  #publicity-block {
+    margin-top: 36px;
+
+    section {
+      margin: 32px 0;
+
+      @media screen and (min-width: 480px) {
+        display: flex;
+      }
+
+      .date {
+        font-weight: bold;
+        margin-bottom: 4px;
+
+        @media screen and (min-width: 480px) {
+          padding-right: 40px;
         }
       }
     }
   }
 
-  #pjax-content {
-    &.work-description {
-      #title-block {
-        h1 {
-          font-size: 2.0em;
-          font-weight: normal;
-        }
+  #bio-block {
+    margin-top: 60px;
+
+    p {
+      margin: 16px 0;
+    }
+  }
+}
+
+
+#pjax-content[page=work-description] {
+  margin: 0 auto;
+  width: calc(100% - 32px);
+  max-width: 720px;
+
+  #title-block {
+    text-align: left;
+
+    .date {
+      color: #999;
+      font-size: 14px;
+    }
+
+    h1 {
+      font-size: 20px;
+
+      @media screen and (min-width: $width-tablet) {
+        font-size: 22px;
       }
 
-      #eyecatch-block {
+      @media screen and (min-width: $width-pc) {
+        font-size: 24px;
+      }
+    }
+  }
+
+  #eyecatch-block {
+    overflow-x: hidden;
+    margin-left: calc(((100vw - 100%) / 2) * -1);
+    width: 100vw;
+
+    @media screen and (min-width: $width-tablet) {
+      margin-left: 0;
+      width: 100%;
+    }
+
+    #eyecatch {
+      margin-left: -15%;
+      width: 130%;
+
+      @media screen and (min-width: $width-pc) {
         margin-left: 0;
         width: 100%;
+      }
+    }
+  }
+
+  #article-block {
+    margin-top: 24px;
+
+    p {
+      line-height: 1.6em;
+      margin-bottom: 16px;
+
+      a {
+        font-family: inherit;
+        text-decoration: none;
+        color: #369;
+      }
+
+      img {
+        width: 100%;
+      }
+
+      &.disclaimer {
+        text-align: center;
+        font-size: 12px;
+        color: #933;
+        margin-top: -12px;
       }
     }
   }
